<resources>
    <string name="app_name">Dots &amp; Boxes</string>
    <string name="current_turn">Current Turn: Red</string>
    <string name="red_score">Red: 0</string>
    <string name="blue_score">Blue: 0</string>
    <string name="play">Play</string>
    <string name="resume">Resume</string>
    <string name="main_menu">Main Menu</string>
    <string name="rematch">Rematch</string>
    <string name="winner">Default</string>
    <string name="tutorial">Tutorial</string>
    <string name="pauseTitle">Paused</string>
    <string name="placeholder">Placeholder</string>
</resources>