<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/better_background">

    <TextView
        android:id="@+id/pauseTitle"
        android:layout_width="236dp"
        android:layout_height="82dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/crayon_font"
        android:text="@string/pauseTitle"
        android:textAlignment="center"
        android:textColor="#2B2B2B"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resumeButton"
        android:layout_width="259dp"
        android:layout_height="96dp"
        android:backgroundTint="#8E8E8E"
        android:fontFamily="@font/crayon_font"
        android:text="@string/resume"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="259dp"
        android:layout_height="96dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#8E8E8E"
        android:fontFamily="@font/crayon_font"
        android:text="@string/main_menu"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumeButton" />
</androidx.constraintlayout.widget.ConstraintLayout>